fix: allow scrolling to all content
when table overflows vertically.

--- a/client/src/pages/table-view/TableView.scss
+++ b/client/src/pages/table-view/TableView.scss
@@ -3,8 +3,6 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  align-items: center;
-  justify-content: center;
   padding: 5px;
   overflow: auto;
 
